update to boston_housing project

--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -389,11 +389,9 @@
     "editable": true
    },
    "source": [
-    "**Answer: ** It's important to have some set of test data to test the model on after training, so that we can measure how well the model performs on data that it was not explicitly trained on.\n",
+    "**Answer: ** Ultimately, we are building a model because we want to use the model to make predictions on new data, where we have the features but do not yet have the true values available. In order to evaluate the model's accuracy, we need a set of test data where we do know the true values. We also need a set of data in this same form for training the model, so the simplest path would be to just use the same set of data for training and testing.\n",
     "\n",
-    "If too much (or all) of the available data is used for training, the model will often be overfit to the training data, meaning it will typically score very high against that same training data but poorly against any other data set. In this scenario the model is basically just \"memorizing\" the training data and repeating it back.\n",
-    "\n",
-    "The trade-off is that the more data reserved for testing, the smaller the training dataset. This leads to high variance (underfitting), even if the model is complex enough, because it didn't get enough training data to accurately capture all the relationships between features."
+    "We split the test data from the training data because if we train with the same data that we test with, we run the risk of overfitting to that specific data. The model may essentially just \"memorize\" the answers for that data, and parrot them back to us, without really being a good fit for future data. By reserving the test data, we can increase our confidence that the model will perform with the expected accuracy going forward."
    ]
   },
   {
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -686,7 +684,7 @@
     "    # sklearn versiin 0.17: ShuffleSplit(n, n_iter=10, test_size=0.1, train_size=None, random_state=None)\n",
     "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
-    "    regressor = DecisionTreeRegressor()\n",
+    "    regressor = DecisionTreeRegressor(random_state = 0)\n",
     "\n",
     "    params = { 'max_depth': np.arange(1,11) }\n",
     "\n",
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -790,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -822,7 +820,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
