finding_donors assignment v3

--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -132,6 +132,7 @@
     "import pandas as pd\n",
     "from time import time\n",
     "from IPython.display import display # Allows the use of display() for DataFrames\n",
+    "from __future__ import division\n",
     "\n",
     "# Import supplementary visualization code visuals.py\n",
     "import visuals as vs\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -195,7 +196,7 @@
     "n_at_most_50k = data[data.income == '<=50K'].shape[0]\n",
     "\n",
     "# TODO: Percentage of individuals whose income is more than $50,000\n",
-    "greater_percent = (float(n_greater_50k) / n_records) * 100\n",
+    "greater_percent = (n_greater_50k / n_records) * 100\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of records: {}\".format(n_records)\n",
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -542,7 +543,7 @@
     "features_final = pd.get_dummies(features_log_minmax_transform)\n",
     "\n",
     "# TODO: Encode the 'income_raw' data to numerical values\n",
-    "income = income_raw.apply(lambda x: x == '>50K' and 1 or 0)\n",
+    "income = income_raw.apply(lambda x: 1 if x == '>50K' else 0)\n",
     "\n",
     "# Print the number of features after one-hot encoding\n",
     "encoded = list(features_final.columns)\n",
